--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start:producer": "node dist/price_poller/producer.js",
+    "start:uploader": "node dist/price_poller/uploader.js",
+    "dev:producer": "tsc -b && node dist/price_poller/producer.js",
+    "dev:uploader": "tsc -b && node dist/price_poller/uploader.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
