--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "start:uploader": "node dist/price_poller/uploader.js",
     "dev:producer": "tsc -b && node dist/price_poller/producer.js",
     "dev:uploader": "tsc -b && node dist/price_poller/uploader.js",
+    "dev:server": "nodemon dist/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.15.5",
     "@types/ws": "^8.18.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2"
   }
 }
