chore: add cookie-parser and cors

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start:producer": "node dist/price_poller/producer.js",
-    "start:uploader": "node dist/price_poller/uploader.js",
-    "dev:producer": "tsc -b && node dist/price_poller/producer.js",
-    "dev:uploader": "tsc -b && node dist/price_poller/uploader.js",
-    "dev:server": "nodemon dist/server/index.js",
+    "start:producer": "node dist/price-poller/producer.js",
+    "start:uploader": "node dist/price-poller/uploader.js",
+    "dev:producer": "tsc -b && node dist/price-poller/producer.js",
+    "dev:uploader": "tsc -b && node dist/price-poller/uploader.js",
+    "dev:server": "tsc -b && nodemon dist/server/index.js",
     "dev:ws": "node dist/ws-fe/ws.js",
+    "dev:liquidator": "tsc -b && node dist/worker/liquidator.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,10 +19,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.15.5",
     "@types/ws": "^8.18.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
